# tonic_basics

./: Cargo.toml  README.md  build.rs  rustfmt.toml
proto/: calculator.proto
src/: client.rs  main.rs  server.rs
