[package]
name = "tonic_basics"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.89"
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
anyhow = "1.0.89"



